# ampf-scaffold

./: Dockerfile  LICENSE  README.md  docker_build.sh  run_dev.sh
backend/: .env.example  .gitignore  pyproject.toml
backend/app/: app_state.py  dependencies.py  log_config.py  main.py  storage_def.py
backend/app/core/: app_config.py  feature_flags.py
backend/tests/unit/: conftest.py
backend/tests/unit/routers/: test_users.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts
frontend/src/app/core/: config.service.ts
frontend/src/app/core/home/: home.html  home.ts
frontend/src/app/core/navigation-bar/: navigation-bar.html  navigation-bar.ts
frontend/src/styles/: core.scss  forms.scss  navigation-bar.scss  shared.scss
infra/: .terraform.lock.hcl  deploy.sh  main.tf  outputs.tf  required_apis.tf  variables.tf
infra/env/prod/: backend.hcl  terraform.tfvars
infra/services/app/: main.tf
