[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "ampf[fastapi]>=0.16.2",
    "fastapi>=0.139.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "uvicorn>=0.51.0",
]

[tool.setuptools]
py-modules = ["app"]

[tool.pytest.ini_options]
pythonpath = [
  "app"
]

[[tool.uv.index]]
url = "https://europe-west3-python.pkg.dev/development-428212/pip/simple/"

[dependency-groups]
dev = [
    "coverage>=7.15.2",
    "httpx2>=2.7.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
]
